--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
+argparse==1.4.0
+click==6.7
 configobj==5.0.6
-Flask==0.10.1
+Flask==0.12
 Flask-Bootstrap==3.3.5.2
 Flask-Restless==0.17.0
 Flask-Script==2.0.5
-Flask-SQLAlchemy==2.0
+Flask-SQLAlchemy==2.1
 itsdangerous==0.24
-Jinja2==2.8
+Jinja2==2.9.5
 MarkupSafe==0.23
 mimerender==0.6.0
 procfs==0.5.0
-python-dateutil==2.5.3
-python-mimeparse==1.5.2
-requests==2.10.0
+python-dateutil==2.6.0
+python-mimeparse==1.6.0
+requests==2.13.0
 rrdtool==0.1.4
 six==1.10.0
-SQLAlchemy==1.0.6
-Werkzeug==0.11.10
+SQLAlchemy==1.1.5
+Werkzeug==0.11.15
