--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
-argparse==1.4.0
 click==6.7
 configobj==5.0.6
-Flask==0.12
+Flask==0.12.2
 Flask-Bootstrap==3.3.5.2
-Flask-Restless==0.17.0
+Flask-Restless==1.0.0b1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 itsdangerous==0.24
-Jinja2==2.9.5
-MarkupSafe==0.23
+Jinja2==2.10
+MarkupSafe==1.0
 mimerender==0.6.0
 procfs==0.5.0
-python-dateutil==2.6.0
+python-dateutil==2.7.2
 python-mimeparse==1.6.0
 requests==2.13.0
 rrdtool==0.1.4
-six==1.10.0
-SQLAlchemy==1.1.5
-Werkzeug==0.11.15
+six==1.11.0
+SQLAlchemy==1.2.6
+Werkzeug==0.14.1
