--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
 install:
     - sudo apt-get --assume-yes install librrd-dev libxml2-dev libglib2.0 libcairo2-dev libpango1.0-dev python-dev python-setuptools build-essential
     - pip install --upgrade -r requirements.txt
+    - pip install --upgrade -r dev-requirements.txt
     - python setup.py develop
 
 script:
