--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
-dist: xenial
+dist: bionic
 
 language: python
 
 python:
-  - "2.7"
+  - "3.6"
 
 install:
-    - sudo apt-get --assume-yes install librrd-dev libxml2-dev libglib2.0 libcairo2-dev libpango1.0-dev python-dev python-setuptools build-essential
-    - pip install --upgrade -r requirements.txt
-    - pip install --upgrade -r dev-requirements.txt
-    - python setup.py develop
+    - sudo apt-get --assume-yes install librrd-dev libxml2-dev libglib2.0 libcairo2-dev libpango1.0-dev python3-dev python3-setuptools python3-pip build-essential
+    - pip3 install --upgrade -r requirements.txt
+    - pip3 install --upgrade -r dev-requirements.txt
+    - python3 setup.py develop
 
 script:
     - py.test tests
